v0.5
===============

  * ? Support for non-integer primary keys (and keys not named 'id')
  * ? Support for composite primary keys

v0.4 2009-04-10
===============

(All for vdm.sqlalchemy)

  * New Repository object (tools.py) to encapsulate repo-wide operations
  * Repo create/clean/init operations
  * Purge revision functionality (r408)
  * List all objects changed in a revision (r408)
  * Put stateful system under proper test and fix several major bugs (r418) 

v0.3 2008-10-31
===============

  * No substantial new features but lots of bugfixes
  * Better compatability with SQLAlchemy v0.5
  * Revision has several new convenience methods and utilizes State

v0.2 2008-05-30 
===============

  * SQLAlchemy implementation of versioned domain model (major)
  * Customized to sqlalchemy with major performance improvements
  * Utilizes 'cache-head-on-continuity' model
  * Partial Elixir implementation.
  * Various (minor) bugfixes and improvments for SQLObject version
  * Greatly improved documentation
  * See announce: <http://blog.okfn.org/2008/05/30/versioned-domain-model-v02-with-support-for-sqlalchemy-released/>

v0.1 2007-02
============

  * Fully functional SQLObject implementation of versioned domain model.
  * Support for basic versioned objects
  * Support for m2m
  * Atomic commits and Revision object